# TTSP

./: .gitignore  README.md  generate.py  ingest.py  phoneme_guide.txt  pyproject.toml  reading_script.txt  requirements.txt
ttsp/: __init__.py  analyzer.py  engine.py  extractor.py  library.py  splicer.py
