[project]
name = "ttsp"
version = "0.1.0"
description = "Text to Speech Poop - YP-style TTS engine"
requires-python = ">=3.9"
dependencies = [
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "g2p_en>=2.1.0",
    "openai-whisper>=20230314",
]

[project.scripts]
ttsp = "ttsp.engine:main"
ttsp-extract = "ttsp.extractor:main"

[tool.setuptools.packages.find]
include = ["ttsp*"]
